# quant_lab

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
configs/examples/: mean_reversion.yaml  momentum_rotation.yaml  trend_following.yaml
docs/: visualization_guide.md
scripts/: build_etf_db.py  run_backtest.py
src/quant_lab/: __init__.py  db.py
src/quant_lab/core/: __init__.py  engine.py  events.py
src/quant_lab/data/: feed.py
src/quant_lab/execution/: __init__.py  broker.py  slippage.py
src/quant_lab/experiment/: comparison.py  config.py  logger.py  runner.py
src/quant_lab/metrics/: __init__.py  calculator.py  visualization.py
src/quant_lab/portfolio/: __init__.py  portfolio.py  position.py
src/quant_lab/strategy/: __init__.py  base.py  mean_reversion.py  momentum_rotation.py  trend_following.py
tests/: conftest.py  test_broker.py  test_events.py  test_metrics.py  test_portfolio.py  test_strategies.py
